--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "live-server extension/",
-    "build": "watchify src/index.js -o extension/index.js -t [ babelify --presets [ \"env\" \"react\"] ] -p [ css-modulesify -o extension/main.css ]"
+    "build": "watchify src/index.js -o extension/index.js -t [ babelify --presets [ \"env\" \"react\"] ] -p [ css-modulesify -o extension/main.css ]",
+    "sass": "node-sass --watch src/styles.scss src/styles.css"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "classnames": "^2.2.5",
     "css-modulesify": "^0.28.0",
     "live-server": "^1.2.0",
+    "node-sass": "^4.9.0",
     "watchify": "^3.11.0"
   },
   "dependencies": {
